test/mutation_analysis/s0263_ugly_number/hafis/ablation_o3_r50/mutants/19/result.txt
./test/mutation_analysis/s0263_ugly_number/hafis/ablation_o3_r50/mutants/19/Solution.java:23: error: unreachable statement
            while (false) {
                          ^
1 error
